# GrifoSync

./: .replit  app.py  main.py  models.py  pyproject.toml  replit.nix
icloud_to_s3/: __init__.py  auth.py  backup.py  config.py  utils.py
migrations/versions/: 096d948c5dbd_add_credential_vault.py  a3733bc6f573_add_cloudcredentials_model.py  aab9b807996b_add_password_hash_to_user_model.py  b482e1c8ceb0_update_credential_vault_schema.py  e66ba2abd991_initial_migration.py
templates/: 2fa.html  backup.html  backup_credentials.html  base.html  dashboard.html  index.html  login.html  manage_credentials.html  register.html  setup_credentials.html
