[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.36.21",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
    "psycopg2-binary>=2.9.10",
    "pyicloud>=1.0.0",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]
